[gd_scene load_steps=4 format=3 uid="uid://bigc17257j6qq"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_yla7e"]
[ext_resource type="Texture2D" uid="uid://dh7gf72gf6bxc" path="res://backgrounds/Green.png" id="2_iree7"]
[ext_resource type="Texture2D" uid="uid://b5eg1s3n85nl3" path="res://terrain/cooltext476249038268407.png" id="3_a43h1"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_yla7e")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 659.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iree7")
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -329.5
offset_right = 329.5
offset_bottom = 141.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("3_a43h1")

[node name="Level1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -467.0
offset_top = -100.0
offset_right = -136.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Level: 1"

[node name="Level2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 61.0
offset_top = -97.0
offset_right = 392.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Level: 2"

[node name="Level3" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 380.0
offset_top = 106.0
offset_right = -438.0
offset_bottom = 227.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Level: 3"

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
